@@ -1,6 +1,12 @@
 Changelog
 =========
 
+UNRELEASED
+----------
+
+- Add support and testing for Django 2.1 and Python 3.7. No actual code changes
+  were required.
+
 Version 4.9.0
 -------------
 
